--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "tachyons": "^4.11.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+     "start": " react-scripts start  \"NODE_PATH=./src\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
